Enable dynamic JOL agent load for tests
(cherry picked from commit 8f97905c5d18afff6a3a06dd14bacad063e31247)